HW/HW2/results/lawsonserge_results.txt
HW\HW2\test\test.java:3: error: package polynomial does not exist
import polynomial.LinearPolynomial;
                 ^
HW\HW2\test\test.java:4: error: package polynomial does not exist
import polynomial.Polynomial;
                 ^
HW\HW2\test\test.java:5: error: package polynomial does not exist
import polynomial.QuadraticPolynomial;
                 ^
3 errors
